test/zinc_source/compile_errors/control_flow/01_if_condition_not_bool.zn
// expected-error: if condition must be a bool

fn main() {
    value = if 1 {
        1
    } else {
        2
    }
}
